[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/entities/obstacles/asteroids/sprites/asteroid_large_02.png" type="Texture" id=1]
[ext_resource path="res://src/entities/obstacles/asteroids/scripts/AsteroidBase.gd" type="Script" id=2]
[ext_resource path="res://src/entities/obstacles/asteroids/sfx/explosion3.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 31.6489

[node name="Asteroid" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 2 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.97381, 2.39227 )
scale = Vector2( 3.40262, 3.36077 )

[node name="AudioPlayers" type="Node" parent="."]

[node name="DestroySFX" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 3 )
volume_db = -15.0
pitch_scale = 1.5
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
